# RealEstateTrackerHiro

./: .replit  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  add_user_to_admin_groups.py  create_initial_data.py  create_sample_properties.py  create_superuser.py  db.sqlite3  docker-compose.example.yml  manage.py  project_requirements.md  pyproject.toml  restore.sh
accounts/: __init__.py  admin.py  decorators.py  forms.py  middleware.py  mixins.py  models.py  security_validator.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
attached_assets/: Pasted-Project-Title-Hiro-Real-Estate-Smart-System-Design-and-deliver-a-professional-scalable-and-produ-1746611844548.txt
config/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
config/migrations/: 0001_initial.py  0002_systemconfig_company_address_and_more.py  0003_alter_backuprecord_file_name_and_more.py  0004_systemconfig_aparat_url_systemconfig_area_unit_and_more.py  0005_systemconfig_property_contact_avatar_and_more.py  0006_backuprecord_backup_type_backuprecord_checksum_and_more.py
dashboard/: __init__.py  admin.py  models.py  views.py
hiro_estate/: __init__.py  asgi.py  csrf.py  security_decorators.py  security_views.py  settings.py  settings_production.py  urls.py  wsgi.py
nginx/conf/: hiroestate.conf
properties/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
static/css/: rtl.css  (+3 more)
templates/: base.html  base.html.backup  blank.html  home.html
راهنمای_نصب/: راهنمای_نصب_آسان.md  نصب_آسان.sh
(+40 files in other folders)
