[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-jalali>=7.4.0",
    "django>=5.2",
    "django-filter>=25.1",
    "psycopg2-binary>=2.9.10",
    "jdatetime>=5.2.0",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.3",
    "pandas>=2.2.3",
    "python-magic>=0.4.27",
]
